force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/vlocity_cmt__QuoteLineItemAdPlacement__c.object-meta.xml
<CustomObject>
    <description>The Media Plan Placement is an extension to the Quote LineItem and captures the details specific to an Ad Placement.</description>
    <label>Media Plan Placement</label>
    <nameField>
        <label>Placement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Plan Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>