force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__AdBleedAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdBleedAmount__c</fullName>
    <description>This captures the distance from the edge.</description>
    <label>Ad Bleed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>