force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__AdCreativeSizeTypes__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdCreativeSizeTypes__c</fullName>
    <description>Semi colon separated User selected Creative SizeTypes from the possible choices presented by each Ad Space.</description>
    <label>Ad Creative SizeTypes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>