force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__AdPlacementPriorityType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdPlacementPriorityType__c</fullName>
    <description>This will be chosen from the Ad Server&apos;s Allowed Ad Priority Type values.
example : STANDARD, PRICE_PRIORITY</description>
    <label>AdPlacement Priority Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>