force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__AdSpaceSpecificationAdServer__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdSpaceSpecificationAdServer__c</fullName>
    <description>This field refer to the Ad Space Specification record&apos;s Ad Server.</description>
    <formula>vlocity_cmt__AdSpaceSpecificationId__r.vlocity_cmt__AdServerId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ad Server</label>
    <type>Text</type>
</CustomField>