force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__AdSpaceSpecificationMediaProperty__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdSpaceSpecificationMediaProperty__c</fullName>
    <description>This refers to the Media Property of the Ad Space Specification record.</description>
    <formula>vlocity_cmt__AdSpaceSpecificationId__r.vlocity_cmt__MediaPropertyId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Media Property</label>
    <type>Text</type>
</CustomField>