force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__AdSpaceSpecificationType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdSpaceSpecificationType__c</fullName>
    <description>This refers to the Ad Space Type fo the Ad Space Specification record.</description>
    <formula>TEXT(vlocity_cmt__AdSpaceSpecificationId__r.vlocity_cmt__AdSpaceType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ad Space Type</label>
    <type>Text</type>
</CustomField>