force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__BonusAdTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BonusAdTime__c</fullName>
    <description>Represents the duration (in seconds) of additional, unpaid commercials.</description>
    <label>Bonus Ad Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>