force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__CostPerRatingPoint__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CostPerRatingPoint__c</fullName>
    <description>Calculates the Cost Per Rating Point by dividing the Implied Rate of the Order Line Item by the Audience size rating of the Ad Space specification.</description>
    <label>Cost Per Rating Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>