force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__CustomerDayPart__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CustomerDayPart__c</fullName>
    <description>Captures the advertiser&apos;s preferred day time for the ad placement according to target audience and program content.</description>
    <label>Customer Day Part</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prime Time</fullName>
            </value>
            <value>
                <fullName>Non Prime Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>