force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__ImpliedTotal__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ImpliedTotal__c</fullName>
    <description>The Implied Total is calculated from the Implied rate and is used by publishers to organise the revenue structure within the deal. This value is often internal to the publisher organisation and not customer facing.</description>
    <label>Implied Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>