force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__MaximumFrequency__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MaximumFrequency__c</fullName>
    <description>Maximum Number of times Ad will be served. This will used for Frequency Capping.</description>
    <label>Maximum Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>