force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__PaidAdTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PaidAdTime__c</fullName>
    <description>Presents the total paid commercial duration (in seconds).</description>
    <label>Paid Ad Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>