force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__QuoteLineItemProductCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteLineItemProductCode__c</fullName>
    <description>This captures the Product Code of the Quote LineItem&apos;s Product.</description>
    <formula>vlocity_cmt__QuoteLineItemId__r.Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>