force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__QuoteLineItemQuantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteLineItemQuantity__c</fullName>
    <description>This refers to the Quantity of the Quote LineItem record.</description>
    <formula>vlocity_cmt__QuoteLineItemId__r.Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>