force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/fields/vlocity_cmt__UserEngagementGoalUnit__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UserEngagementGoalUnit__c</fullName>
    <description>This represents the number or percentage of impressions or clicks that will be reserved for the Ad Creative.</description>
    <label>User Engagement Goal Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>