force-app/main/default/objects/vlocity_cmt__QuoteLineItemAdPlacement__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__QuoteId__c</columns>
    <columns>vlocity_cmt__QuoteLineItemId__c</columns>
    <columns>vlocity_cmt__MediaType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>